syntax = "proto3";

package auth.v1;

import "user.proto";

// AuthService defines the gRPC service for authentication.
service AuthService {
  // rpc to sign up a user
  rpc SignUp(SignUpRequest) returns (user.v1.User) {}
  // rpc to sign in a user
  rpc SignIn(SignInRequest) returns (AuthResponse) {}
  // rpc to verify email
  rpc VerifyEmail(VerifyEmailRequest) returns (AuthResponse) {}
  // rpc to resend confirmation email
  rpc ResendConfirmationEmail(Email) returns (user.v1.StatusResponse) {}
  // rpc to refresh tokens
  rpc RefreshTokens(Token) returns (RefreshTokensResponse) {}
  // rpc to reset password
  rpc InitResetPassword(Email) returns (user.v1.StatusResponse) {}
  // rpc to resend reset password email
  rpc ResendResetPasswordEmail(Email) returns (user.v1.StatusResponse) {}
  // rpc to set new password
  rpc SetNewPassword(SetNewPasswordRequest) returns (user.v1.StatusResponse) {}
  // rpc to sign out a user from current device
  rpc SignOutCurrentDevice(SignOutRequest) returns (user.v1.StatusResponse) {}
  // rpc to sign out a user from other devices
  rpc SignOutOtherDevices(SignOutRequest) returns (user.v1.StatusResponse) {}
  // rpc to sign out a user from all devices
  rpc SignOutAllDevices(user.v1.Id) returns (user.v1.StatusResponse) {}
}

// Message for sign up request
message SignUpRequest {
  optional string name = 1;
  string email = 2;
  string password = 3;
  optional string phone_number = 4;
}

// Message for sign in request
message SignInRequest {
  string email = 1;
  string password = 2;
  optional ClientInfo client_info = 3;
}

// Message for client information (used in sign in)
message ClientInfo {
  optional string ip_address = 1;
  optional string user_agent = 2;
}

// Message for verify email request
message VerifyEmailRequest {
  string token = 1;
  optional ClientInfo client_info = 2;
}

// Message for sigh in / verify email response containing tokens
message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  user.v1.User user = 3;
}

// Message for refresh tokens response
message RefreshTokensResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Message representing a token
message Token {
  string token = 1;
}

// Message representing an email
message Email {
  string email = 1;
}

// Message for setting a new password
message SetNewPasswordRequest {
  string token = 1;
  string password = 2;
}

// Message for signing out from other devices
message SignOutRequest {
  string user_id = 1;
  string current_session_id = 2;
}

// Command to generate TypeScript code with NestJS options, using null for optional fields and Date for timestamps
// protoc -I ./proto ./proto/auth.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true --ts_proto_opt=useNullAsOptional=true --ts_proto_opt=useDate=true